A first, fully working version of the new streamline GeSpectrum module and config file

--- a/analyzer/rootana/configurations/ge.cfg
+++ b/analyzer/rootana/configurations/ge.cfg
@@ -1,11 +1,38 @@
+list_modules
+dump_contents
+
 [ MODULES ]
+analyse_pulses = MakeAnalysedPulses
+PlotTAP_Time
+PlotTAP_Energy
+
+pair_pulses = MakeDetectorPulses
+PlotTDPs
+
+muon_events = MakeMuonEvents
+CheckTMEs
+#TMEViewer
+
 ge = GeSpectrum
 
-[ ge ]
-musc_cf=0.50
-gef_gen=FirstComplete
-gef_cfg={constant_fraction=0.90}
-gef_cf=0.90
+[ analyse_pulses ]
+analyse_channels=muSc
+muSc=FirstComplete(0.60, false, false) # include the already calibrated time shift and don't use the PCF
 
-ges_gen=MaxBinAPGenerator
-ges_cfg=
+analyse_channels+=Ge-S
+analyse_channels+=Ge-F
+Ge-S=FirstComplete(0.60, false, false)
+Ge-F=FirstComplete(0.90, false, false)
+
+[ pair_pulses ]
+#debug
+analyse_detectors=muSc Ge
+default_algorithm=MaxTimeDiff(0.2)
+
+[ muon_events ]
+event_window=1.5e4
+
+[ ge ]
+time_axis_min=-1.5e4
+time_axis_max=1.5e4
+time_bin_width=10
