Now define the energy axis on the input config file

--- a/analyzer/rootana/configurations/ge.cfg
+++ b/analyzer/rootana/configurations/ge.cfg
@@ -36,3 +36,7 @@ event_window=1.5e4
 time_axis_min=-1.5e4
 time_axis_max=1.5e4
 time_bin_width=10
+
+energy_axis_min=0
+energy_axis_max=2000
+energy_bin_width=0.1
