Add ScL and ScR to the analysis

--- a/analyzer/rootana/configurations/andy_Al50.cfg
+++ b/analyzer/rootana/configurations/andy_Al50.cfg
@@ -82,10 +82,10 @@ SiL1-4-S=FirstComplete(0.70, false, false)
 #SiL1-3-F=FirstComplete(0.40)
 #SiL1-4-F=FirstComplete(0.90)
 
-#analyse_channels+=ScL
-#analyse_channels+=ScR
-#ScL=FirstComplete(0.50, false, true)
-#ScR=FirstComplete(0.50, false, true)
+analyse_channels+=ScL
+analyse_channels+=ScR
+ScL=FirstComplete(0.50, false, true)
+ScR=FirstComplete(0.50, false, true)
 
 [ pair_pulses ]
 #debug
