Want to find what fraction of muons are vetoed by ScVe, so add it to the analysis. Also don't use the PCF for the scintillators

--- a/analyzer/rootana/configurations/andy_Al50.cfg
+++ b/analyzer/rootana/configurations/andy_Al50.cfg
@@ -84,8 +84,11 @@ SiL1-4-S=FirstComplete(0.70, false, false)
 
 analyse_channels+=ScL
 analyse_channels+=ScR
-ScL=FirstComplete(0.50, false, true)
-ScR=FirstComplete(0.50, false, true)
+ScL=FirstComplete(0.50, false, false)
+ScR=FirstComplete(0.50, false, false)
+
+analyze_channels+=ScVe
+ScVe=FirstComplete(0.50, false, false)
 
 [ pair_pulses ]
 #debug
