Need the PCf for these channels since the commonly trigger with the muSc. Also correct a typo

--- a/analyzer/rootana/configurations/andy_Al50.cfg
+++ b/analyzer/rootana/configurations/andy_Al50.cfg
@@ -84,11 +84,11 @@ SiL1-4-S=FirstComplete(0.70, false, false)
 
 analyse_channels+=ScL
 analyse_channels+=ScR
-ScL=FirstComplete(0.50, false, false)
-ScR=FirstComplete(0.50, false, false)
+ScL=FirstComplete(0.50, false, true)
+ScR=FirstComplete(0.50, false, true)
 
-analyze_channels+=ScVe
-ScVe=FirstComplete(0.10, false, false)
+analyse_channels+=ScVe
+ScVe=FirstComplete(0.10, false, true)
 
 [ pair_pulses ]
 #debug
