hack to compile w r15b odb

--- a/analyzer/rootana/configurations/pulse_viewer.cfg
+++ b/analyzer/rootana/configurations/pulse_viewer.cfg
@@ -25,7 +25,7 @@ stop_at_max_plots=true
 summarize=true
 
 [ analyse_pulses ]
-analyse_channels=all
+analyse_channels=Ge-S
 default_fast_generator=FirstComplete
 default_slow_generator=FirstComplete
 
