--- a/analyzer/rootana/configurations/R15a_amp.cfg
+++ b/analyzer/rootana/configurations/R15a_amp.cfg
@@ -2,21 +2,16 @@
 analyse_pulses = MakeAnalysedPulses
 ## Plot TAPS
 PlotTAP_Amplitude
-PlotTAP_Energy
-PlotTAP_Integral
+# PlotTAP_Energy
 
 # ExportPulse
 # pv=PulseViewer
 [ analyse_pulses ]
 analyse_channels=LaBr3 GeCHEL GeCHEH
-LaBr3=FirstComplete(0.30,true)
+LaBr3=MovingAverageFilter(4, 0.30, true, true)
+#MovingAverageFilter(window_width, constant_fraction,
+# no_time_shift, use_pcf) # pulse candidate finder
 GeCHEL=FirstComplete(0.30,true)
 GeCHEH=FirstComplete(0.30,true)
 
-# [pv]
-# source=LaBr3
-# trigger=amplitude>100 
-# max_plots=20
-# stop_at_max_plots=true
-# summarize=true
 # vim: set syn=cfg:
