SiT slow channel muon adc cut

--- a/analyzer/rootana/configurations/timeoffset_calib.cfg
+++ b/analyzer/rootana/configurations/timeoffset_calib.cfg
@@ -7,13 +7,13 @@ analyse_pulses = MakeAnalysedPulses
 
 PlotTAP_Amplitude
 ## Plot TDiffs
-t2f = PlotTAP_TDiff(SiT-2-F, SiT-1-F, 0, 5e3, true)
-t3f = PlotTAP_TDiff(SiT-3-F, SiT-1-F, 0, 5e3, true)
-t4f = PlotTAP_TDiff(SiT-4-F, SiT-1-F, 0, 5e3, true)
-t1s = PlotTAP_TDiff(SiT-1-S, SiT-1-F, 0, 5e3, true)
-t2s = PlotTAP_TDiff(SiT-2-S, SiT-1-F, 0, 5e3, true)
-t3s = PlotTAP_TDiff(SiT-3-S, SiT-1-F, 0, 5e3, true)
-t4s = PlotTAP_TDiff(SiT-4-S, SiT-1-F, 0, 5e3, true)
+t2f = PlotTAP_TDiff(SiT-2-F, SiT-1-F, -1e3, 5e3, true)
+t3f = PlotTAP_TDiff(SiT-3-F, SiT-1-F, -1e3, 5e3, true)
+t4f = PlotTAP_TDiff(SiT-4-F, SiT-1-F, -1e3, 5e3, true)
+t1s = PlotTAP_TDiff(SiT-1-S, SiT-1-F, -1e3, 5e3, true)
+t2s = PlotTAP_TDiff(SiT-2-S, SiT-1-F, -1e3, 5e3, true)
+t3s = PlotTAP_TDiff(SiT-3-S, SiT-1-F, -1e3, 5e3, true)
+t4s = PlotTAP_TDiff(SiT-4-S, SiT-1-F, -1e3, 5e3, true)
 
 r11f = PlotTAP_TDiff(SiR1-1-F, SiT-1-F, 0, 5e3, true)
 r12f = PlotTAP_TDiff(SiR1-2-F, SiT-1-F, 0, 5e3, true)
@@ -104,13 +104,13 @@ analyse_channels+=GeHiGain
 default_slow_generator=MaxBin
 default_fast_generator=MaxBin
 
-SiT-2-F=FirstComplete(0.70, true)
-SiT-3-F=FirstComplete(0.70, true)
-SiT-4-F=FirstComplete(0.70, true)
-SiT-1-S=FirstComplete(0.70, true)
-SiT-2-S=FirstComplete(0.70, true)
-SiT-3-S=FirstComplete(0.70, true)
-SiT-4-S=FirstComplete(0.70, true)
+#SiT-2-F=FirstComplete(0.70, true)
+#SiT-3-F=FirstComplete(0.70, true)
+#SiT-4-F=FirstComplete(0.70, true)
+#SiT-1-S=FirstComplete(0.70, true)
+#SiT-2-S=FirstComplete(0.70, true)
+#SiT-3-S=FirstComplete(0.70, true)
+#SiT-4-S=FirstComplete(0.70, true)
 
 SiR2-S=FirstComplete(0.70,true)
 #SiL2-S=FirstComplete(0.60,true)
