Improving ExportPulse and TAnalysedPulse so that negative polarity pulses are drawn nicely (i.e. with negative amplitude)

--- a/analyzer/rootana/configurations/andy_R15b_pulserviewer.cfg
+++ b/analyzer/rootana/configurations/andy_R15b_pulserviewer.cfg
@@ -9,7 +9,7 @@ pv=PulseViewer
 ExportPulse
 
 [pv]
-source=SiL1-4-S
+source=SiL3-F
 trigger=amplitude>500
 max_plots=20
 stop_at_max_plots=true
@@ -18,8 +18,8 @@ summarize=true
 
 
 [ analyse_pulses ]
-analyse_channels=SiL1-4-S
-default_fast_generator=MaxBin(true)
-default_slow_generator=MaxBin(true)
+analyse_channels=SiL3-F
+default_fast_generator=FirstComplete(1.0, true)
+default_slow_generator=FirstComplete(1.0, true)
 
 # vim: set syn=cfg:
