Adding all the strips for the SiL1 - GeLoGain coincidence plots as well as adding a tighter window on the SiL1-4-S - SiT-1-S TDiff plot for another run over the Si16b dataset

--- a/analyzer/rootana/configurations/R15b_stopped-muon-count-discrepancy.cfg
+++ b/analyzer/rootana/configurations/R15b_stopped-muon-count-discrepancy.cfg
@@ -12,12 +12,29 @@ PlotTAP_EnergyTime
 l4_gelo = PlotTAP_TDiff(SiL1-1-S, GeLoGain, -50e3, 50e3, false)
 l4_gehi = PlotTAP_TDiff(SiL1-4-S, GeHiGain, -50e3, 50e3, false)
 l4_t1 = PlotTAP_TDiff(SiL1-4-S, SiT-1-S, -10e3, 10e3, false)
+l4_t1_zoom = PlotTAP_TDiff(SiL1-4-S, SiT-1-S, 600,1000, false)
 l4_l3 = PlotTAP_TDiff(SiL1-4-S, SiL1-3-S, -5e3, 5e3, false)
 l4_lth = PlotTAP_TDiff(SiL1-4-S, SiL3-S, -120e6, 120e6, false)
 lth_t1 = PlotTAP_TDiff(SiL3-S, SiT-1-S, -5e3, 5e3, false)
 PlotTAP_NMuons_Si16(200, 4000)
 # can use CountXRays.C if I put GeLoGain energy on the x-axis
-PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-4-S, 13500, 15000) 
+l1_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-1-S, 13500, 15000) 
+l2_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-2-S, 13500, 15000) 
+l3_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-3-S, 13500, 15000) 
+l4_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-4-S, 13500, 15000)
+l5_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-5-S, 13500, 15000) 
+l6_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-6-S, 13500, 15000) 
+l7_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-7-S, 13500, 15000) 
+l8_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-8-S, 13500, 15000) 
+l9_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-9-S, 13500, 15000) 
+l10_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-10-S, 13500, 15000) 
+l11_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-11-S, 13500, 15000) 
+l12_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-12-S, 13500, 15000) 
+l13_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-13-S, 13500, 15000) 
+l14_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-14-S, 13500, 15000) 
+l15_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-15-S, 13500, 15000) 
+l16_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-16-S, 13500, 15000) 
+l4_t1_coinc=PlotTAP_Energy_wCoincidence(SiT-1-S, SiL1-4-S, -1000, -600) 
 
 [ analyse_pulses ]
 #analyse_channels=all
