--- a/analyzer/rootana/configurations/correlations-w-rough-time-cut_for_meeting_2017-01-10.cfg
+++ b/analyzer/rootana/configurations/correlations-w-rough-time-cut_for_meeting_2017-01-10.cfg
@@ -11,49 +11,49 @@ t1s = PlotTAP_TDiff(SiT-1-S, SiT-4-S, -10e3, 10e3, false)
 t2s = PlotTAP_TDiff(SiT-2-S, SiT-4-S, -10e3, 10e3, false)
 t3s = PlotTAP_TDiff(SiT-3-S, SiT-4-S, -10e3, 10e3, false)
 
-l1_1s = PlotTAP_TDiff(SiL1-1-S, SiT-4-S, -10e3, 10e3, false)
-l1_2s = PlotTAP_TDiff(SiL1-2-S, SiT-4-S, -10e3, 10e3, false)
-l1_3s = PlotTAP_TDiff(SiL1-3-S, SiT-4-S, -10e3, 10e3, false)
-l1_4s = PlotTAP_TDiff(SiL1-4-S, SiT-4-S, -10e3, 10e3, false)
-l1_5s = PlotTAP_TDiff(SiL1-5-S, SiT-4-S, -10e3, 10e3, false)
-l1_6s = PlotTAP_TDiff(SiL1-6-S, SiT-4-S, -10e3, 10e3, false)
-l1_7s = PlotTAP_TDiff(SiL1-7-S, SiT-4-S, -10e3, 10e3, false)
-l1_8s = PlotTAP_TDiff(SiL1-8-S, SiT-4-S, -10e3, 10e3, false)
-l1_9s = PlotTAP_TDiff(SiL1-9-S, SiT-4-S, -10e3, 10e3, false)
-l1_10s = PlotTAP_TDiff(SiL1-10-S, SiT-4-S, -10e3, 10e3, false)
-l1_11s = PlotTAP_TDiff(SiL1-11-S, SiT-4-S, -10e3, 10e3, false)
-l1_12s = PlotTAP_TDiff(SiL1-12-S, SiT-4-S, -10e3, 10e3, false)
-l1_13s = PlotTAP_TDiff(SiL1-13-S, SiT-4-S, -10e3, 10e3, false)
-l1_14s = PlotTAP_TDiff(SiL1-14-S, SiT-4-S, -10e3, 10e3, false)
-l1_15s = PlotTAP_TDiff(SiL1-15-S, SiT-4-S, -10e3, 10e3, false)
-l1_16s = PlotTAP_TDiff(SiL1-16-S, SiT-4-S, -10e3, 10e3, false)
-l3_s = PlotTAP_TDiff(SiL3-S, SiT-4-S, -10e3, 10e3, false)
+l1_1s = PlotTAP_TDiff(SiL1-1-S, SiT-4-S, -4e3, 4e3, false)
+l1_2s = PlotTAP_TDiff(SiL1-2-S, SiT-4-S, -4e3, 4e3, false)
+l1_3s = PlotTAP_TDiff(SiL1-3-S, SiT-4-S, -4e3, 4e3, false)
+l1_4s = PlotTAP_TDiff(SiL1-4-S, SiT-4-S, -4e3, 4e3, false)
+l1_5s = PlotTAP_TDiff(SiL1-5-S, SiT-4-S, -4e3, 4e3, false)
+l1_6s = PlotTAP_TDiff(SiL1-6-S, SiT-4-S, -4e3, 4e3, false)
+l1_7s = PlotTAP_TDiff(SiL1-7-S, SiT-4-S, -4e3, 4e3, false)
+l1_8s = PlotTAP_TDiff(SiL1-8-S, SiT-4-S, -4e3, 4e3, false)
+l1_9s = PlotTAP_TDiff(SiL1-9-S, SiT-4-S, -4e3, 4e3, false)
+l1_10s = PlotTAP_TDiff(SiL1-10-S, SiT-4-S, -4e3, 4e3, false)
+l1_11s = PlotTAP_TDiff(SiL1-11-S, SiT-4-S, -4e3, 4e3, false)
+l1_12s = PlotTAP_TDiff(SiL1-12-S, SiT-4-S, -4e3, 4e3, false)
+l1_13s = PlotTAP_TDiff(SiL1-13-S, SiT-4-S, -4e3, 4e3, false)
+l1_14s = PlotTAP_TDiff(SiL1-14-S, SiT-4-S, -4e3, 4e3, false)
+l1_15s = PlotTAP_TDiff(SiL1-15-S, SiT-4-S, -4e3, 4e3, false)
+l1_16s = PlotTAP_TDiff(SiL1-16-S, SiT-4-S, -4e3, 4e3, false)
+l3_s = PlotTAP_TDiff(SiL3-S, SiT-4-S, -4e3, 4e3, false)
 
-r1_1s = PlotTAP_TDiff(SiR1-1-S, SiT-4-S, -10e3, 10e3, false)
-r1_2s = PlotTAP_TDiff(SiR1-2-S, SiT-4-S, -10e3, 10e3, false)
-r1_3s = PlotTAP_TDiff(SiR1-3-S, SiT-4-S, -10e3, 10e3, false)
-r1_4s = PlotTAP_TDiff(SiR1-4-S, SiT-4-S, -10e3, 10e3, false)
-r2_s = PlotTAP_TDiff(SiR2-S, SiT-4-S, -10e3, 10e3, false)
-r3_s = PlotTAP_TDiff(SiR3-S, SiT-4-S, -10e3, 10e3, false)
+r1_1s = PlotTAP_TDiff(SiR1-1-S, SiT-4-S, -4e3, 4e3, false)
+r1_2s = PlotTAP_TDiff(SiR1-2-S, SiT-4-S, -4e3, 4e3, false)
+r1_3s = PlotTAP_TDiff(SiR1-3-S, SiT-4-S, -4e3, 4e3, false)
+r1_4s = PlotTAP_TDiff(SiR1-4-S, SiT-4-S, -4e3, 4e3, false)
+r2_s = PlotTAP_TDiff(SiR2-S, SiT-4-S, -4e3, 4e3, false)
+r3_s = PlotTAP_TDiff(SiR3-S, SiT-4-S, -4e3, 4e3, false)
 
-glo = PlotTAP_TDiff(GeLoGain, SiT-4-S, -50e3, 50e3, false)
-ghi = PlotTAP_TDiff(GeHiGain, SiT-4-S, -50e3, 50e3, false)
+glo = PlotTAP_TDiff(GeLoGain, SiT-4-S, -10e3, 30e3, false)
+ghi = PlotTAP_TDiff(GeHiGain, SiT-4-S, -10e3, 30e3, false)
 
 t1f = PlotTAP_TDiff(SiT-1-F, SiT-4-S, -100e6, 100e6, false)
 t2f = PlotTAP_TDiff(SiT-2-F, SiT-4-S, -100e6, 100e6, false)
 t3f = PlotTAP_TDiff(SiT-3-F, SiT-4-S, -100e6, 100e6, false)
-t4f = PlotTAP_TDiff(SiT-4-F, SiT-4-S, -10e6, 10e6, false)
+t4f = PlotTAP_TDiff(SiT-4-F, SiT-4-S, -10e3, 10e3, false)
 
-l1_af = PlotTAP_TDiff(SiL1-A-F, SiT-4-S, -10e4, 10e4, false)
-l1_bf = PlotTAP_TDiff(SiL1-B-F, SiT-4-S, -10e4, 10e4, false)
-l3_f = PlotTAP_TDiff(SiL3-F, SiT-4-S, -10e4, 10e4, false)
+l1_af = PlotTAP_TDiff(SiL1-A-F, SiT-4-S, -5e3, 5e3, false)
+l1_bf = PlotTAP_TDiff(SiL1-B-F, SiT-4-S, -5e3, 5e3, false)
+l3_f = PlotTAP_TDiff(SiL3-F, SiT-4-S, -5e3, 5e3, false)
 
-r1_1f = PlotTAP_TDiff(SiR1-1-F, SiT-4-S, -10e4, 10e4, false)
-r1_2f = PlotTAP_TDiff(SiR1-2-F, SiT-4-S, -10e4, 10e4, false)
-r1_3f = PlotTAP_TDiff(SiR1-3-F, SiT-4-S, -10e4, 10e4, false)
-r1_4f = PlotTAP_TDiff(SiR1-4-F, SiT-4-S, -10e4, 10e4, false)
-r2_f = PlotTAP_TDiff(SiR2-F, SiT-4-S, -10e4, 10e4, false)
-r3_f = PlotTAP_TDiff(SiR3-F, SiT-4-S, -10e4, 10e4, false)
+r1_1f = PlotTAP_TDiff(SiR1-1-F, SiT-4-S, -5e3, 5e3, false)
+r1_2f = PlotTAP_TDiff(SiR1-2-F, SiT-4-S, -5e3, 5e3, false)
+r1_3f = PlotTAP_TDiff(SiR1-3-F, SiT-4-S, -5e3, 5e3, false)
+r1_4f = PlotTAP_TDiff(SiR1-4-F, SiT-4-S, -5e3, 5e3, false)
+r2_f = PlotTAP_TDiff(SiR2-F, SiT-4-S, -5e3, 5e3, false)
+r3_f = PlotTAP_TDiff(SiR3-F, SiT-4-S, -5e3, 5e3, false)
 
 ## Plot TDiffs (each slow channel with its corresponding fast channel)
 t1sf = PlotTAP_TDiff(SiT-1-S, SiT-1-F, -5e3, 5e3, false)
@@ -61,30 +61,30 @@ t2sf = PlotTAP_TDiff(SiT-2-S, SiT-2-F, -5e3, 5e3, false)
 t3sf = PlotTAP_TDiff(SiT-3-S, SiT-3-F, -5e3, 5e3, false)
 t4sf = PlotTAP_TDiff(SiT-4-S, SiT-4-F, -5e3, 5e3, false)
 
-l1_1sf = PlotTAP_TDiff(SiL1-1-S, SiL1-A-F, -5e3, 5e3, false)
-l1_2sf = PlotTAP_TDiff(SiL1-2-S, SiL1-A-F, -5e3, 5e3, false)
-l1_3sf = PlotTAP_TDiff(SiL1-3-S, SiL1-A-F, -5e3, 5e3, false)
-l1_4sf = PlotTAP_TDiff(SiL1-4-S, SiL1-A-F, -5e3, 5e3, false)
-l1_5sf = PlotTAP_TDiff(SiL1-5-S, SiL1-A-F, -5e3, 5e3, false)
-l1_6sf = PlotTAP_TDiff(SiL1-6-S, SiL1-A-F, -5e3, 5e3, false)
-l1_7sf = PlotTAP_TDiff(SiL1-7-S, SiL1-A-F, -5e3, 5e3, false)
-l1_8sf = PlotTAP_TDiff(SiL1-8-S, SiL1-A-F, -5e3, 5e3, false)
-l1_9sf = PlotTAP_TDiff(SiL1-9-S, SiL1-B-F, -5e3, 5e3, false)
-l1_10sf = PlotTAP_TDiff(SiL1-10-S, SiL1-B-F, -5e3, 5e3, false)
-l1_11sf = PlotTAP_TDiff(SiL1-11-S, SiL1-B-F, -5e3, 5e3, false)
-l1_12sf = PlotTAP_TDiff(SiL1-12-S, SiL1-B-F, -5e3, 5e3, false)
-l1_13sf = PlotTAP_TDiff(SiL1-13-S, SiL1-B-F, -5e3, 5e3, false)
-l1_14sf = PlotTAP_TDiff(SiL1-14-S, SiL1-B-F, -5e3, 5e3, false)
-l1_15sf = PlotTAP_TDiff(SiL1-15-S, SiL1-B-F, -5e3, 5e3, false)
-l1_16sf = PlotTAP_TDiff(SiL1-16-S, SiL1-B-F, -5e3, 5e3, false)
-l3_sf = PlotTAP_TDiff(SiL3-S, SiL3-F, -5e3, 5e3, false)
+l1_1sf = PlotTAP_TDiff(SiL1-1-S, SiL1-A-F, 0, 4e3, false)
+l1_2sf = PlotTAP_TDiff(SiL1-2-S, SiL1-A-F, 0, 4e3, false)
+l1_3sf = PlotTAP_TDiff(SiL1-3-S, SiL1-A-F, 0, 4e3, false)
+l1_4sf = PlotTAP_TDiff(SiL1-4-S, SiL1-A-F, 0, 4e3, false)
+l1_5sf = PlotTAP_TDiff(SiL1-5-S, SiL1-A-F, 0, 4e3, false)
+l1_6sf = PlotTAP_TDiff(SiL1-6-S, SiL1-A-F, 0, 4e3, false)
+l1_7sf = PlotTAP_TDiff(SiL1-7-S, SiL1-A-F, 0, 4e3, false)
+l1_8sf = PlotTAP_TDiff(SiL1-8-S, SiL1-A-F, 0, 4e3, false)
+l1_9sf = PlotTAP_TDiff(SiL1-9-S, SiL1-B-F, 0, 4e3, false)
+l1_10sf = PlotTAP_TDiff(SiL1-10-S, SiL1-B-F, 0, 4e3, false)
+l1_11sf = PlotTAP_TDiff(SiL1-11-S, SiL1-B-F, 0, 4e3, false)
+l1_12sf = PlotTAP_TDiff(SiL1-12-S, SiL1-B-F, 0, 4e3, false)
+l1_13sf = PlotTAP_TDiff(SiL1-13-S, SiL1-B-F, 0, 4e3, false)
+l1_14sf = PlotTAP_TDiff(SiL1-14-S, SiL1-B-F, 0, 4e3, false)
+l1_15sf = PlotTAP_TDiff(SiL1-15-S, SiL1-B-F, 0, 4e3, false)
+l1_16sf = PlotTAP_TDiff(SiL1-16-S, SiL1-B-F, 0, 4e3, false)
+l3_sf = PlotTAP_TDiff(SiL3-S, SiL3-F, 0, 2e3, false)
 
-r1_1sf = PlotTAP_TDiff(SiR1-1-S, SiR1-1-F, -5e3, 5e3, false)
-r1_2sf = PlotTAP_TDiff(SiR1-2-S, SiR1-2-F, -5e3, 5e3, false)
-r1_3sf = PlotTAP_TDiff(SiR1-3-S, SiR1-3-F, -5e3, 5e3, false)
-r1_4sf = PlotTAP_TDiff(SiR1-4-S, SiR1-4-F, -5e3, 5e3, false)
-r2_sf = PlotTAP_TDiff(SiR2-S, SiR2-F, -5e3, 5e3, false)
-r3_sf = PlotTAP_TDiff(SiR3-S, SiR3-F, -5e3, 5e3, false)
+r1_1sf = PlotTAP_TDiff(SiR1-1-S, SiR1-1-F, 0, 2e3, false)
+r1_2sf = PlotTAP_TDiff(SiR1-2-S, SiR1-2-F, 0, 2e3, false)
+r1_3sf = PlotTAP_TDiff(SiR1-3-S, SiR1-3-F, 0, 2e3, false)
+r1_4sf = PlotTAP_TDiff(SiR1-4-S, SiR1-4-F, 0, 2e3, false)
+r2_sf = PlotTAP_TDiff(SiR2-S, SiR2-F, 0, 2e3, false)
+r3_sf = PlotTAP_TDiff(SiR3-S, SiR3-F, 0, 2e3, false)
 
 
 [ analyse_pulses ]
