Adding a new PlotTAP module to help me with the stopped muon discrepancy problem. It tries to find better stopped muon spectra in SiL1 and SiL3 by looking for coincidence/no coincidence in the other detector. Also adding a ROOT macro that creates some plots from the histograms this module makes. Modifying the rootana cfg file to run PlotTAP_StoppedMuonDiscrepancy. Also modifed PlotTAP_TDiff to reduce the number of bins and also to not throw an exception when we look at the time difference between two identical channels since we want to look at the autocorrelation for the SIS boards.

--- a/analyzer/rootana/configurations/R15b_stopped-muon-count-discrepancy.cfg
+++ b/analyzer/rootana/configurations/R15b_stopped-muon-count-discrepancy.cfg
@@ -5,36 +5,72 @@ dump_contents
 [ MODULES ]
 analyse_pulses = MakeAnalysedPulses
 
-PlotTAP_Amplitude
-PlotTAP_Energy
-PlotTAP_Time
-PlotTAP_EnergyTime
-l4_gelo = PlotTAP_TDiff(SiL1-1-S, GeLoGain, -50e3, 50e3, false)
+#PlotTAP_Amplitude
+#PlotTAP_Energy
+#PlotTAP_Time
+#PlotTAP_EnergyTime
+l4_gelo = PlotTAP_TDiff(SiL1-4-S, GeLoGain, -50e3, 50e3, false)
 l4_gehi = PlotTAP_TDiff(SiL1-4-S, GeHiGain, -50e3, 50e3, false)
 l4_t1 = PlotTAP_TDiff(SiL1-4-S, SiT-1-S, -10e3, 10e3, false)
-l4_t1_zoom = PlotTAP_TDiff(SiL1-4-S, SiT-1-S, 600,1000, false)
+l4_t2 = PlotTAP_TDiff(SiL1-4-S, SiT-2-S, -10e3, 10e3, false)
+l4_t3 = PlotTAP_TDiff(SiL1-4-S, SiT-3-S, -10e3, 10e3, false)
+l4_t4 = PlotTAP_TDiff(SiL1-4-S, SiT-4-S, -10e3, 10e3, false)
+l4_t1_zoom = PlotTAP_TDiff(SiL1-4-S, SiT-1-S, 600,5000, false)
 l4_l3 = PlotTAP_TDiff(SiL1-4-S, SiL1-3-S, -5e3, 5e3, false)
-l4_lth = PlotTAP_TDiff(SiL1-4-S, SiL3-S, -120e6, 120e6, false)
+l4_lth = PlotTAP_TDiff(SiL1-4-S, SiL3-S, 0, 2e3, false)
+l2_lth = PlotTAP_TDiff(SiL1-2-S, SiL3-S, -2e3, 2e3, false)
 lth_t1 = PlotTAP_TDiff(SiL3-S, SiT-1-S, -5e3, 5e3, false)
+l4s_laf = PlotTAP_TDiff(SiL1-4-S, SiL1-A-F, -5e3, 5e3, false)
+lth_gelo = PlotTAP_TDiff(SiL3-S, GeLoGain, -20e3, -10e3, false)
+lth_gehi = PlotTAP_TDiff(SiL3-S, GeHiGain, -50e3, 50e3, false)
+
 PlotTAP_NMuons_Si16(200, 4000)
 # can use CountXRays.C if I put GeLoGain energy on the x-axis
-l1_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-1-S, 13500, 15000) 
-l2_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-2-S, 13500, 15000) 
-l3_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-3-S, 13500, 15000) 
-l4_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-4-S, 13500, 15000)
-l5_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-5-S, 13500, 15000) 
-l6_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-6-S, 13500, 15000) 
-l7_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-7-S, 13500, 15000) 
-l8_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-8-S, 13500, 15000) 
-l9_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-9-S, 13500, 15000) 
-l10_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-10-S, 13500, 15000) 
-l11_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-11-S, 13500, 15000) 
-l12_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-12-S, 13500, 15000) 
-l13_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-13-S, 13500, 15000) 
-l14_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-14-S, 13500, 15000) 
-l15_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-15-S, 13500, 15000) 
-l16_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-16-S, 13500, 15000) 
-l4_t1_coinc=PlotTAP_Energy_wCoincidence(SiT-1-S, SiL1-4-S, -1000, -600) 
+#l1_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-1-S, 13500, 15000) 
+#l2_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-2-S, 13500, 15000) 
+#l3_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-3-S, 13500, 15000) 
+#l4_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-4-S, 13500, 15000)
+#l5_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-5-S, 13500, 15000) 
+#l6_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-6-S, 13500, 15000) 
+#l7_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-7-S, 13500, 15000) 
+#l8_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-8-S, 13500, 15000) 
+#l9_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-9-S, 13500, 15000) 
+#l10_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-10-S, 13500, 15000) 
+#l11_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-11-S, 13500, 15000) 
+#l12_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-12-S, 13500, 15000) 
+#l13_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-13-S, 13500, 15000) 
+#l14_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-14-S, 13500, 15000) 
+#l15_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-15-S, 13500, 15000) 
+#l16_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL1-16-S, 13500, 15000) 
+#l2_t1_coinc=PlotTAP_Energy_wCoincidence(SiT-1-S, SiL1-2-S, -1000, -600) 
+#l3_t1_coinc=PlotTAP_Energy_wCoincidence(SiT-1-S, SiL1-3-S, -1000, -600) 
+#l4_t1_coinc=PlotTAP_Energy_wCoincidence(SiT-1-S, SiL1-4-S, -1000, -600) 
+#l5_t1_coinc=PlotTAP_Energy_wCoincidence(SiT-1-S, SiL1-5-S, -1000, -600) 
+#l6_t1_coinc=PlotTAP_Energy_wCoincidence(SiT-1-S, SiL1-6-S, -1000, -600) 
+#l7_t1_coinc=PlotTAP_Energy_wCoincidence(SiT-1-S, SiL1-7-S, -1000, -600) 
+#l8_t1_coinc=PlotTAP_Energy_wCoincidence(SiT-1-S, SiL1-8-S, -1000, -600) 
+#l9_t1_coinc=PlotTAP_Energy_wCoincidence(SiT-1-S, SiL1-9-S, -1000, -600) 
+#l10_t1_coinc=PlotTAP_Energy_wCoincidence(SiT-1-S, SiL1-10-S, -1000, -600) 
+#l11_t1_coinc=PlotTAP_Energy_wCoincidence(SiT-1-S, SiL1-11-S, -1000, -600) 
+#l12_t1_coinc=PlotTAP_Energy_wCoincidence(SiT-1-S, SiL1-12-S, -1000, -600) 
+#l13_t1_coinc=PlotTAP_Energy_wCoincidence(SiT-1-S, SiL1-13-S, -1000, -600) 
+#l14_t1_coinc=PlotTAP_Energy_wCoincidence(SiT-1-S, SiL1-14-S, -1000, -600) 
+#l15_t1_coinc=PlotTAP_Energy_wCoincidence(SiT-1-S, SiL1-15-S, -1000, -600) 
+#lth_gelo_coin=PlotTAP_Energy_wCoincidence(GeLoGain, SiL3-S, 14000, 16000) 
+#l4_lth_coin=PlotTAP_Energy_wCoincidence(SiL1-4-S, SiL3-S, 800, 1200) 
+
+stopped_muon_discrepancy=PlotTAP_StoppedMuonDiscrepancy
+
+[ stopped_muon_discrepancy ]
+coinc_time_low_sil1_gelo=13000
+coinc_time_high_sil1_gelo=17000
+
+coinc_time_low_sil3_gelo=14000
+coinc_time_high_sil3_gelo=16000
+
+coinc_time_low_sil3_sil1=400
+coinc_time_high_sil3_sil1=600
+
 
 [ analyse_pulses ]
 #analyse_channels=all
@@ -55,9 +91,14 @@ analyse_channels+=SiL1-14-S
 analyse_channels+=SiL1-15-S
 analyse_channels+=SiL1-16-S
 analyse_channels+=GeLoGain
-analyse_channels+=GeHiGain
+#analyse_channels+=GeHiGain
 analyse_channels+=SiT-1-S
+analyse_channels+=SiT-2-S
+analyse_channels+=SiT-3-S
+analyse_channels+=SiT-4-S
 analyse_channels+=SiL3-S
+#analyse_channels+=SiL1-A-F
+#analyse_channels+=SiL1-B-F
 
 default_slow_generator=FirstComplete_RoughSyncPulseCut(0.20, true)
 default_fast_generator=FirstComplete_RoughSyncPulseCut(0.20, true)
