Updated the MaxBin cfg to include the new arugment list

--- a/analyzer/rootana/configurations/goal1.cfg
+++ b/analyzer/rootana/configurations/goal1.cfg
@@ -12,5 +12,5 @@ PlotTAP_EnergyTime
 #analyse_channels=all
 analyse_channels=GeLoGain
 analyse_channels+=GeHiGain
-default_slow_generator=MaxBin
-default_fast_generator=MaxBin
+default_slow_generator=MaxBin(true)
+default_fast_generator=MaxBin(true)
