A few changes to some cfg files I was playing with

--- a/analyzer/rootana/configurations/andy_R15b_Si16_scans.cfg
+++ b/analyzer/rootana/configurations/andy_R15b_Si16_scans.cfg
@@ -27,7 +27,7 @@ analyse_channels+=SiL1-12-S
 analyse_channels+=SiL1-13-S
 analyse_channels+=SiL1-14-S
 analyse_channels+=SiL1-15-S
-#analyse_channels+=SiL1-16-S
-#analyse_channels+=SiL3-S
+analyse_channels+=SiL1-16-S
+analyse_channels+=SiL3-S
 default_slow_generator=MaxBin
 default_fast_generator=MaxBin
