--- a/analyzer/rootana/configurations/andy_R15b_pulserviewer.cfg
+++ b/analyzer/rootana/configurations/andy_R15b_pulserviewer.cfg
@@ -9,8 +9,8 @@ pv=PulseViewer
 ExportPulse
 
 [pv]
-source=SiL3-F
-trigger=amplitude>500
+source=SiT-4-S
+trigger=amplitude>250
 max_plots=20
 stop_at_max_plots=true
 #debug
@@ -18,8 +18,10 @@ summarize=true
 
 
 [ analyse_pulses ]
-analyse_channels=SiL3-F
-default_fast_generator=FirstComplete(1.0, true)
-default_slow_generator=FirstComplete(1.0, true)
+analyse_channels=SiT-4-S
+default_fast_generator=FirstComplete_RoughSyncPulseCut(0.20, true)
+default_slow_generator=FirstComplete_RoughSyncPulseCut(0.20, true)
+#default_fast_generator=MaxBin(true)
+#default_slow_generator=MaxBin(true)
 
 # vim: set syn=cfg:
