Adding useful config information to output ROOT file. Now MakeAnalysedPulses, MakeDetectorPulses and MakeMuonEvents will create directories in the output folder so they can record their TObjString. Also made them not use default algorithms so that the algorithm name will be written out. Also added dummy config options for our names into R15b_tme-tree. This isn't enforced so we will just have to be vigilant

--- a/analyzer/rootana/configurations/R15b_tme-tree.cfg
+++ b/analyzer/rootana/configurations/R15b_tme-tree.cfg
@@ -9,11 +9,10 @@ pair_pulses = MakeDetectorPulses
 PlotTDPs
 muon_events = MakeMuonEvents
 #TMEViewer
-CheckTMEs_NoPP=CheckTMEs(false)
-CheckTMEs_PP=CheckTMEs(true)
-TMETree
+tmetree = TMETree
 
 [ analyse_pulses ]
+user=andy
 #analyse_channels=all
 analyse_channels=SiT-1-S
 analyse_channels+=SiT-2-S
@@ -50,9 +49,15 @@ default_fast_generator=FirstComplete_RoughSyncPulseCut(0.20, false)
 
 [ pair_pulses ]
 #debug
+user=andy
 default_algorithm=PassThrough
 time_difference=0.001
 
 [ muon_events ]
+user=andy
+algorithm=FixedWindow
 event_window=2.0e4
 central_muon_energy_cut=200
+
+[ tmetree ]
+user=andy
