Add the TPI ID as a possible selector for the PulseViewer. An example of how to use is in configurations/andy_R15b_pulseviewer.cfg

--- a/analyzer/rootana/configurations/andy_R15b_pulserviewer.cfg
+++ b/analyzer/rootana/configurations/andy_R15b_pulserviewer.cfg
@@ -6,11 +6,21 @@
 analyse_pulses = MakeAnalysedPulses
 pv=PulseViewer
 #pv2=PulseViewer
+#pv3=PulseViewer
+#pv4=PulseViewer
 ExportPulse
 
 [pv]
-source=SiT-4-S
-trigger=amplitude>250
+source=SiT-3-S
+trigger=(event_no==26&&tpi_id==67)||(event_no==102&&tpi_id==67)||(event_no==132&&tpi_id==73)||(event_no==154&&tpi_id==25)||(event_no==200&&tpi_id==120)||(event_no==275&&tpi_id==114)||(event_no==292&&tpi_id==51)||(event_no==332&&tpi_id==49)||(event_no==379&&tpi_id==63)
+max_plots=20
+stop_at_max_plots=true
+#debug
+summarize=true
+
+[pv2]
+source=GeLoGain
+trigger=(event_no==26||event_no==39||event_no==57||event_no==102||event_no==128)
 max_plots=20
 stop_at_max_plots=true
 #debug
@@ -18,7 +28,7 @@ summarize=true
 
 
 [ analyse_pulses ]
-analyse_channels=SiT-4-S
+analyse_channels=SiT-3-S
 default_fast_generator=FirstComplete_RoughSyncPulseCut(0.20, true)
 default_slow_generator=FirstComplete_RoughSyncPulseCut(0.20, true)
 #default_fast_generator=MaxBin(true)
