ped calib csvs go to a separate folder, script copied from John's place

--- a/analyzer/rootana/configurations/timeoffset_calib.cfg
+++ b/analyzer/rootana/configurations/timeoffset_calib.cfg
@@ -1,63 +1,64 @@
 #debug=all
-list_modules
-dump_contents
+#list_modules
+#dump_contents
 
 [ MODULES ]
 analyse_pulses = MakeAnalysedPulses
 
 PlotTAP_Amplitude
 ## Plot TDiffs
-t2f = PlotTAP_TDiff(SiT-2-F, SiT-1-F, -1e3, 5e3, true)
-t3f = PlotTAP_TDiff(SiT-3-F, SiT-1-F, -1e3, 5e3, true)
-t4f = PlotTAP_TDiff(SiT-4-F, SiT-1-F, -1e3, 5e3, true)
-t1s = PlotTAP_TDiff(SiT-1-S, SiT-1-F, -1e3, 5e3, true)
-t2s = PlotTAP_TDiff(SiT-2-S, SiT-1-F, -1e3, 5e3, true)
-t3s = PlotTAP_TDiff(SiT-3-S, SiT-1-F, -1e3, 5e3, true)
-t4s = PlotTAP_TDiff(SiT-4-S, SiT-1-F, -1e3, 5e3, true)
+t1f = PlotTAP_TDiff(SiT-1-F, SiT-1-S, -2e3, 2e3, true)
+t2f = PlotTAP_TDiff(SiT-2-F, SiT-1-S, -2e3, 2e3, true)
+t3f = PlotTAP_TDiff(SiT-3-F, SiT-1-S, -2e3, 2e3, true)
+t4f = PlotTAP_TDiff(SiT-4-F, SiT-1-S, -2e3, 2e3, true)
+t2s = PlotTAP_TDiff(SiT-2-S, SiT-1-S, -2e3, 2e3, true)
+t3s = PlotTAP_TDiff(SiT-3-S, SiT-1-S, -2e3, 2e3, true)
+t4s = PlotTAP_TDiff(SiT-4-S, SiT-1-S, -2e3, 2e3, true)
 
-r11f = PlotTAP_TDiff(SiR1-1-F, SiT-1-F, 0, 5e3, true)
-r12f = PlotTAP_TDiff(SiR1-2-F, SiT-1-F, 0, 5e3, true)
-r13f = PlotTAP_TDiff(SiR1-3-F, SiT-1-F, 0, 5e3, true)
-r14f = PlotTAP_TDiff(SiR1-4-F, SiT-1-F, 0, 5e3, true)
-r11s = PlotTAP_TDiff(SiR1-1-S, SiT-1-F, 0, 5e3, true)
-r12s = PlotTAP_TDiff(SiR1-2-S, SiT-1-F, 0, 5e3, true)
-r13s = PlotTAP_TDiff(SiR1-3-S, SiT-1-F, 0, 5e3, true)
-r14s = PlotTAP_TDiff(SiR1-4-S, SiT-1-F, 0, 5e3, true)
+r11f = PlotTAP_TDiff(SiR1-1-F, SiT-1-S, -5e3, 5e3, true)
+r12f = PlotTAP_TDiff(SiR1-2-F, SiT-1-S, -5e3, 5e3, true)
+r13f = PlotTAP_TDiff(SiR1-3-F, SiT-1-S, -5e3, 5e3, true)
+r14f = PlotTAP_TDiff(SiR1-4-F, SiT-1-S, -5e3, 5e3, true)
+r11s = PlotTAP_TDiff(SiR1-1-S, SiT-1-S, -5e3, 5e3, true)
+r12s = PlotTAP_TDiff(SiR1-2-S, SiT-1-S, -5e3, 5e3, true)
+r13s = PlotTAP_TDiff(SiR1-3-S, SiT-1-S, -5e3, 5e3, true)
+r14s = PlotTAP_TDiff(SiR1-4-S, SiT-1-S, -5e3, 5e3, true)
 
-l1af = PlotTAP_TDiff(SiL1-A-F, SiT-1-F, 0, 5e3, true)
-l1bf = PlotTAP_TDiff(SiL1-B-F, SiT-1-F, 0, 5e3, true)
-l11s = PlotTAP_TDiff(SiL1-1-S, SiT-1-F, 0, 5e3, true)
-l12s = PlotTAP_TDiff(SiL1-2-S, SiT-1-F, 0, 5e3, true)
-l13s = PlotTAP_TDiff(SiL1-3-S, SiT-1-F, 0, 5e3, true)
-l14s = PlotTAP_TDiff(SiL1-4-S, SiT-1-F, 0, 5e3, true)
-l15s = PlotTAP_TDiff(SiL1-5-S, SiT-1-F, 0, 5e3, true)
-l16s = PlotTAP_TDiff(SiL1-6-S, SiT-1-F, 0, 5e3, true)
-l17s = PlotTAP_TDiff(SiL1-7-S, SiT-1-F, 0, 5e3, true)
-l18s = PlotTAP_TDiff(SiL1-8-S, SiT-1-F, 0, 5e3, true)
-l19s = PlotTAP_TDiff(SiL1-9-S, SiT-1-F, 0, 5e3, true)
-l10s = PlotTAP_TDiff(SiL1-10-S, SiT-1-F, 0, 5e3, true)
-l1As = PlotTAP_TDiff(SiL1-11-S, SiT-1-F, 0, 5e3, true)
-l1Bs = PlotTAP_TDiff(SiL1-12-S, SiT-1-F, 0, 5e3, true)
-l1Cs = PlotTAP_TDiff(SiL1-13-S, SiT-1-F, 0, 5e3, true)
-l1Ds = PlotTAP_TDiff(SiL1-14-S, SiT-1-F, 0, 5e3, true)
-l1Es = PlotTAP_TDiff(SiL1-15-S, SiT-1-F, 0, 5e3, true)
-l1Fs = PlotTAP_TDiff(SiL1-16-S, SiT-1-F, 0, 5e3, true)
+l1af = PlotTAP_TDiff(SiL1-A-F, SiT-1-S, -5e3, 5e3, true)
+l1bf = PlotTAP_TDiff(SiL1-B-F, SiT-1-S, -5e3, 5e3, true)
+l11s = PlotTAP_TDiff(SiL1-1-S, SiT-1-S, -5e3, 5e3, true)
+l12s = PlotTAP_TDiff(SiL1-2-S, SiT-1-S, -5e3, 5e3, true)
+l13s = PlotTAP_TDiff(SiL1-3-S, SiT-1-S, -5e3, 5e3, true)
+l14s = PlotTAP_TDiff(SiL1-4-S, SiT-1-S, -5e3, 5e3, true)
+l15s = PlotTAP_TDiff(SiL1-5-S, SiT-1-S, -5e3, 5e3, true)
+l16s = PlotTAP_TDiff(SiL1-6-S, SiT-1-S, -5e3, 5e3, true)
+l17s = PlotTAP_TDiff(SiL1-7-S, SiT-1-S, -5e3, 5e3, true)
+l18s = PlotTAP_TDiff(SiL1-8-S, SiT-1-S, -5e3, 5e3, true)
+l19s = PlotTAP_TDiff(SiL1-9-S, SiT-1-S, -5e3, 5e3, true)
+l110s = PlotTAP_TDiff(SiL1-10-S, SiT-1-S, -5e3, 5e3, true)
+l111s = PlotTAP_TDiff(SiL1-11-S, SiT-1-S, -5e3, 5e3, true)
+l112s = PlotTAP_TDiff(SiL1-12-S, SiT-1-S, -5e3, 5e3, true)
+l113s = PlotTAP_TDiff(SiL1-13-S, SiT-1-S, -5e3, 5e3, true)
+l114s = PlotTAP_TDiff(SiL1-14-S, SiT-1-S, -5e3, 5e3, true)
+l115s = PlotTAP_TDiff(SiL1-15-S, SiT-1-S, -5e3, 5e3, true)
+l116s = PlotTAP_TDiff(SiL1-16-S, SiT-1-S, 0, 5e3, true)
 
-r2s = PlotTAP_TDiff(SiR2-S, SiT-1-F, 0, 5e3, true)
-#l2s = PlotTAP_TDiff(SiL2-S, SiT-1-F, 0, 3e5, true)
+r2f = PlotTAP_TDiff(SiR2-F, SiT-1-S, -5e3, 5e3, true)
+r3f = PlotTAP_TDiff(SiR3-F, SiT-1-S, -5e3, 5e3, true)
+l2f = PlotTAP_TDiff(SiL2-F, SiT-1-S, -5e3, 5e3, true)
+l3f = PlotTAP_TDiff(SiL3-F, SiT-1-S, -5e3, 5e3, true)
+r2s = PlotTAP_TDiff(SiR2-S, SiT-1-S, -5e3, 5e3, true)
+r3s = PlotTAP_TDiff(SiR3-S, SiT-1-S, -5e3, 5e3, true)
+l2s = PlotTAP_TDiff(SiL2-S, SiT-1-S, -5e3, 5e3, true)
+l3s = PlotTAP_TDiff(SiL3-S, SiT-1-S, -5e3, 5e3, true)
 
-r2f = PlotTAP_TDiff(SiR2-F, SiT-1-F, -1e2, 5e3, true)
-
-r3s = PlotTAP_TDiff(SiR3-S, SiT-1-F, -1e4, 4e4, true)
-l3s = PlotTAP_TDiff(SiL3-S, SiT-1-F, -1e3, 3e3, true)
-
-l3f = PlotTAP_TDiff(SiL3-F, SiT-1-F, -1e3, 5e3, true)
-
-glo = PlotTAP_TDiff(GeLoGain, SiT-1-F, 12000, 20000, true)
-ghi = PlotTAP_TDiff(GeHiGain, SiT-1-F, 12000, 20000, true)
+glo = PlotTAP_TDiff(GeLoGain, SiT-1-S, 10e3, 20e3, true)
+ghi = PlotTAP_TDiff(GeHiGain, SiT-1-S, 10e3, 20e3, true)
 
 [ analyse_pulses ]
-#SiT-1-F is MaxBin
+default_slow_generator=FirstComplete_RoughSyncPulseCut(0.20,true)
+default_fast_generator=FirstComplete_RoughSyncPulseCut(0.20,true)
+
 analyse_channels=SiT-1-F
 analyse_channels+=SiT-2-F
 analyse_channels+=SiT-3-F
@@ -92,65 +93,19 @@ analyse_channels+=SiL1-13-S
 analyse_channels+=SiL1-14-S
 analyse_channels+=SiL1-15-S
 analyse_channels+=SiL1-16-S
-analyse_channels+=SiR2-S
-#analyse_channels+=SiL2-S
 analyse_channels+=SiR2-F
-analyse_channels+=SiR3-S
-analyse_channels+=SiL3-S
+analyse_channels+=SiR3-F
+analyse_channels+=SiL2-F
 analyse_channels+=SiL3-F
+analyse_channels+=SiR2-S
+analyse_channels+=SiR3-S
+analyse_channels+=SiL2-S
+analyse_channels+=SiL3-S
 analyse_channels+=GeLoGain
 analyse_channels+=GeHiGain
 
-default_slow_generator=MaxBin
-default_fast_generator=MaxBin
+[ t3s ]
+use_high_amp_bin_cut=true
 
-#SiT-2-F=FirstComplete(0.70, true)
-#SiT-3-F=FirstComplete(0.70, true)
-#SiT-4-F=FirstComplete(0.70, true)
-#SiT-1-S=FirstComplete(0.70, true)
-#SiT-2-S=FirstComplete(0.70, true)
-#SiT-3-S=FirstComplete(0.70, true)
-#SiT-4-S=FirstComplete(0.70, true)
-
-SiR2-S=FirstComplete(0.70,true)
-#SiL2-S=FirstComplete(0.60,true)
-
-SiR2-F=FirstComplete(0.70,true)
-
-SiR3-S=FirstComplete(0.70,true)
-SiL3-S=FirstComplete(0.70,true)
-
-SiL3-F=FirstComplete(0.70,true)
-
-SiR1-1-S=FirstComplete(0.70,true)
-SiR1-2-S=FirstComplete(0.70,true)
-SiR1-3-S=FirstComplete(0.70,true)
-SiR1-4-S=FirstComplete(0.70,true)
-
-SiR1-1-F=FirstComplete(0.70,true)
-SiR1-2-F=FirstComplete(0.70,true)
-SiR1-3-F=FirstComplete(0.70,true)
-SiR1-4-F=FirstComplete(0.70,true)
-
-SiL1-1-S=FirstComplete(0.70,true)
-SiL1-2-S=FirstComplete(0.70,true)
-SiL1-3-S=FirstComplete(0.70,true)
-SiL1-4-S=FirstComplete(0.70,true)
-SiL1-5-S=FirstComplete(0.70,true)
-SiL1-6-S=FirstComplete(0.70,true)
-SiL1-7-S=FirstComplete(0.70,true)
-SiL1-8-S=FirstComplete(0.70,true)
-SiL1-9-S=FirstComplete(0.70,true)
-SiL1-10-S=FirstComplete(0.70,true)
-SiL1-11-S=FirstComplete(0.70,true)
-SiL1-12-S=FirstComplete(0.70,true)
-SiL1-13-S=FirstComplete(0.70,true)
-SiL1-14-S=FirstComplete(0.70,true)
-SiL1-15-S=FirstComplete(0.70,true)
-SiL1-16-S=FirstComplete(0.70,true)
-
-SiL1-A-F=FirstComplete(0.70,true)
-SiL1-B-F=FirstComplete(0.70,true)
-
-GeLoGain=FirstComplete(0.70,true)
-GeHiGain=FirstComplete(0.70,true)
+[ r11s ]
+use_high_amp_bin_cut=true
