--- a/analyzer/rootana/Makefile
+++ b/analyzer/rootana/Makefile
@@ -58,7 +58,7 @@ else
 endif
 
 # Generate the library flags (-L and -l) for the gcc argument
-ROOT_LIBS = $(shell $(ROOTSYS)/bin/root-config --libs) -lThread -lGui -lMinuit -lMinuit2 -lRSQLite
+ROOT_LIBS = $(shell $(ROOTSYS)/bin/root-config --libs) -lThread -lGui -lMinuit -lMinuit2 -lRSQLite -lSpectrum
 ALL_LIBS =  $(ROOT_LIBS)
 
 OPTFLAGS = -g -O3 -Wno-write-strings
