Commiting a few changes/improvements that mean we can also run on the SiL3 dataset (e.g. allow the central muon channels to be configurable)

--- a/analyzer/rootana/configurations/R15b_tme-tree.cfg
+++ b/analyzer/rootana/configurations/R15b_tme-tree.cfg
@@ -58,6 +58,10 @@ user=andy
 algorithm=FixedWindow
 event_window=2.0e4
 central_muon_energy_cut=200
+muon_channels=SiT-1
+muon_channels+=SiT-2
+muon_channels+=SiT-3
+muon_channels+=SiT-4
 
 [ tmetree ]
 user=andy
