Apologies for the dump of files and changes this includes: new template fitting, cfg files for rootana, and scripts to produce plots that hve gone into the progress report or my recent presentations. I will try to tidy up as I go along from now

--- a/analyzer/rootana/configurations/R15b_TemplateFits.cfg
+++ b/analyzer/rootana/configurations/R15b_TemplateFits.cfg
@@ -5,7 +5,7 @@ list_modules
 analysed_pulses=MakeAnalysedPulses
 #pulse_viewer=PulseViewer
 #export=ExportPulse
-#TAPTree
+TAPTree
 pair_pulses = MakeDetectorPulses
 muon_events = MakeMuonEvents
 #TMEViewer
@@ -14,9 +14,9 @@ tmetree = TMETree
 
 [analysed_pulses]
 #analyse_channels=SiR2-F SiR2-S
-analyse_channels=SiT-1-S
-analyse_channels+=SiL1-8-S
-analyse_channels+=SiL1-9-S
+analyse_channels=muSc
+analyse_channels+=SiL3-S
+analyse_channels+=SiT-4-S
 ## cut_a
 #default_fast_generator=TemplateFit(cut_b_template.root,true, 0, 2e4, 0.4, 0.41 )
 ## cut_b
@@ -28,7 +28,7 @@ analyse_channels+=SiL1-9-S
 ## cut_e
 #default_fast_generator=TemplateFit(cut_b_template.root,true, 10e4, 11e4, 0.7, 0.75 )
 ##no_cut
-default_slow_generator=TemplateFit(templates.root)
+default_slow_generator=TemplateFit(templates.root, 0.20, false)
 #default_slow_generator=FirstComplete_RoughSyncPulseCut(0.20, false)
 default_fast_generator=MaxBin
 
@@ -42,22 +42,28 @@ time_difference=0.001
 user=andy
 algorithm=FixedWindow
 event_window=2.0e4
-central_muon_energy_cut=200
+central_muon_energy_cut=0
+muon_channels=muSc
+
 
 [ tmetree ]
 user=andy
 
 [pulse_viewer]
-source=SiL1-9-S
+source=SiL3-S
+#source=muSc
 #trigger=Chi2>20000
 trigger=amplitude>0
 pulse_type=TemplateFitAP
-max_plots=200
-stop_at_max_plots=true
+max_plots=10000
+stop_at_max_plots=false
 summarize=true
 #debug
 
 [export]
-x_axis=pulse_time
+#x_axis=sample_number
+#x_axis=pulse_time
+x_axis=block_time
 y_axis=pedestal_subtracted
+#y_axis=not_pedestal_subtracted
 run_pulse_finder=true
