--- a/analyzer/rootana/configurations/andy_R15b_Si16_scans.cfg
+++ b/analyzer/rootana/configurations/andy_R15b_Si16_scans.cfg
@@ -29,5 +29,5 @@ analyse_channels+=SiL1-14-S
 analyse_channels+=SiL1-15-S
 analyse_channels+=SiL1-16-S
 analyse_channels+=SiL3-S
-default_slow_generator=MaxBin
+default_slow_generator=FirstComplete_RoughSyncPulseCut(0.20, false)
 default_fast_generator=MaxBin
