Use an absolute path for the template file

--- a/analyzer/rootana/configurations/R15b_t-muon-event_timeoffset_SiL3Dataset_templates.cfg
+++ b/analyzer/rootana/configurations/R15b_t-muon-event_timeoffset_SiL3Dataset_templates.cfg
@@ -44,5 +44,5 @@ analyse_channels+=SiL3-S
 #analyse_channels+=GeLoGain
 #analyse_channels+=GeHiGain
 
-default_slow_generator=TemplateFit(templates_SiL3Dataset.root, 0.20, true)
+default_slow_generator=TemplateFit(~/AlcapDAQ/analyzer/rootana/templates_SiL3Dataset.root, 0.20, true)
 default_fast_generator=FirstComplete_RoughSyncPulseCut(0.20, true)
