Some ROOT6 changes to Mark's bayesian unfolding method

--- a/analyzer/rootana/scripts/Unfolding/bayesian-unfolding/GNUmakefile
+++ b/analyzer/rootana/scripts/Unfolding/bayesian-unfolding/GNUmakefile
@@ -240,6 +240,7 @@ else
 GOALS         = $(filter-out clean cleanbin help,$(MAKECMDGOALS))
 endif
 
+CPPFLAGS     += -std=c++11
 CPPFLAGS     += -DMAKEBUILD
 ifneq ($(findstring g++,$(CXX)),)
 MFLAGS        = -MM
